<resources>
    <string name="app_name">DriveAwake</string>
    <string name="or">or</string>
    <string name="welcome">Welcome!</string>
    <string name="get_started">Get started with</string>
    <string name="sign_up_with">Or sign up with</string>
    <string name="email">Email</string>
    <string name="already">Already onboard?</string>
    <string name="login">Login</string>
    <string name="hello">Hello.</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_pwd">Password</string>
    <string name="hint_confirm_pwd">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="register_error">All fields must be filled out</string>
    <string name="wel_back">Welcome Back</string>
    <string name="ny_register">Not yet registered?</string>
    <string name="signup">Click here</string>
    <string name="home">Home</string>
    <string name="homeData">Home</string>
    <string name="sensitization">Sensitization</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="dashboard">Dashboard</string>
    <string name="dash">Dashboard</string>
    <string name="about">About</string>
    <string name="in_order_to_ensure_your_security_please_configure_who_you_wanna_call_in_emergency">In order to ensure your security, please configure who you wanna call in emergency</string>
    <string name="hospital_number">Hospital number</string>
    <string name="family_or_friend_number">Family or Friend number</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="do_you_want_to_visit_our_website">Do you want to visit our website?</string>
    <string name="check_our_social_media">Check our social media</string>
    <string name="bmp">BMP</string>
    <string name="c">°C</string>
    <string name="ppm">PPM</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="awareness">Awareness</string>
    <string name="age">Age</string>
    <string name="bpm">BPM</string>
</resources>
